# pls

./: .gitignore  COLOR_SYSTEM.md  Cargo.toml  LICENSE  PKGBUILD  README.md  config.default.json  config.schema.json
examples/: lazy_style_demo.rs
figura/: Cargo.toml  README.md
figura/examples/: custom_parser.rs  default_parser.rs  demo.rs
figura/src/: delimiters.rs  directives.rs  error.rs  lib.rs  var.rs
src/: args.rs  bytes.rs  config.rs  dir.rs  directives.rs  err.rs  error.rs  git.rs  icons.rs  main.rs  style.rs  styles.rs  table.rs  template.rs  tree.rs  util.rs  utils.rs  walk.rs
src/commands/: find.rs  list.rs  mod.rs  size.rs
src/pls-0.1.0/: Cargo.toml
src/pls-0.1.0/src/: config.rs  walk.rs
