[package]
name = "pls"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
crossbeam = "0.8.4"
dirs = "6.0.0"
figura = "1.3.2"
rayon = "1.11.0"
regex = "1.12.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
strip-ansi-escapes = "0.2.1"
tikv-jemallocator = "0.6.1"
unicode-width = "0.2.1"
users = "0.11.0"
