[package]
name = "figura"
version = "1.0.0"
edition = "2024"
authors = ["Saverio Scagnoli <svscagn@gmail.com>"]
description = "A flexible string template formatting crate"
documentation = "https://docs.rs/figura"
repository = "https://github.com/saverioscagnoli/pls/tree/figura/figura"
homepage = "https://github.com/saverioscagnoli/pls/tree/figura/figura"
license = "MIT"
readme = "README.md"
keywords = ["string", "format", "template"]

exclude = [
    ".vscode",
    ".gitignore",
    "docs",
]

[dependencies]
smacro = { version = "0.1.0", features = ["map"] }
thiserror = "2.0.12"

[lib]
doctest = false
